--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,23 @@
 
 @custom-variant dark (&:is(.dark *));
 
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
@@ -40,6 +57,8 @@
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-background: var(--sidebar-background);
   --color-sidebar-ring: var(--sidebar-ring);
+  --color-custom-success: var(--custom-success);
+  --color-custom-error: var(--custom-error);
 }
 
 :root {
@@ -76,6 +95,8 @@
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-background: oklch(0.9851 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --custom-success: #14B8A6;
+  --custom-error: #BE185D;
 }
 
 .dark {
